--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
-  "type": "module",     
+  "type": "module",
   "author": "",
   "license": "ISC",
   "description": "",
@@ -20,6 +20,8 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.6.2",
     "nodemon": "^3.1.10"
   }
 }
